# strata

./: .dockerignore  .env.example  .gitignore  Dockerfile  NOTICE  Procfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  streamlit_app.py
.github/workflows/: ci.yml  deploy.yml  test.yml
.streamlit/: config.toml
docs/: INSTRUCTOR_INTEGRATION.md
docs/screenshots/: .gitkeep
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_rubric_override.py
samples/: board_pack_inputs.json  bva_inputs.json  capex_memo_inputs.json  cfo_dashboard_inputs.json  cross_functional_brief_inputs.json  earnings_script_inputs.json  employee_all_hands_inputs.json  gl_extract.csv  investor_update_inputs.json  ma_memo_inputs.json  maturity_self_assessment.yaml  post_investment_review_inputs.json  risk_register_inputs.json  three_statement_inputs.json
src/strata/: __init__.py  cli.py  config.py  db.py  models.py  registry.py  schema.py
src/strata/catalog/: __init__.py  catalog.yaml  loader.py
src/strata/deliverable/: __init__.py  author.py  base.py  board_pack.py  bva_commentary.py  capex_memo.py  cfo_dashboard.py  cross_functional_brief.py  earnings_script.py  employee_all_hands.py  factory.py  grader.py  instructor_grader.py  investor_update.py  ma_memo.py  persona.py  post_investment_review.py  risk_register.py  three_statement.py
src/strata/maturity/: __init__.py  assessor.py  competency.py  overrides.py  roadmap.py
src/strata/orchestrator/: __init__.py  chains.py  director.py
src/strata/perception/: __init__.py  adapters.py
src/strata/rubrics/competency/: digital.yaml  fpna.yaml  risk_governance.yaml  stakeholder.yaml  strategic_leadership.yaml
src/strata/rubrics/deliverable/: board_pack.yaml  bva_commentary.yaml  capex_memo.yaml  cfo_dashboard.yaml  cross_functional_brief.yaml  earnings_script.yaml  employee_all_hands.yaml  investor_update.yaml  ma_memo.yaml  post_investment_review.yaml  risk_register.yaml  three_statement.yaml
src/strata/rubrics/function/: board_pack_capability.yaml  bva.yaml  (+6 more)
src/strata/vector/: __init__.py  exemplars.py
tests/: conftest.py  test_alembic.py  test_assessor.py  test_basic.py  test_catalog.py  test_cli.py  test_director.py  test_factory.py  test_internals.py  test_live_llm.py  test_new_chains.py  test_routing.py  test_schema.py  test_v3.py  test_v4.py  test_v5.py  test_v6.py  test_v7_exemplars.py
